Reorganized TickRunner.Snapshot
-this just moves the cuboid, entity, and creature data into sub-structures so they are related instead of being inlined as parallel maps in the snapshot